--- a/src/main/webapp/WEB-INF/views/people/edit.html
+++ b/src/main/webapp/WEB-INF/views/people/edit.html
@@ -20,6 +20,11 @@
     <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
     <br/>
     <input type="submit" value="Update!"/>
+    <label for="address">Enter address: </label>
+    <input type="text" th:field="*{address}" id="address">
+    <div style="color : aqua" th:if="${#fields.hasErrors('address')}" th:errors="*{address}">Address error</div>
+    <br/>
+    <input type="submit" value="Create"/>
 </form>
 
 </body>
